[tool.poetry]
name = "MinecraftTerrainTest"
version = "0.1.0"
description = ""
authors = ["Killian Townsend <oasisscript87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.19.0"
noise = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
